output_slurm/train_error_1.txt

Currently Loaded Modules:
  1) python3.10-anaconda/2023.03   4) cupti/11.8.0    7) numpy/1.22.3
  2) cuda/11.8.0                   5) gcc/10.3.0      8) pytorch/2.0.1
  3) cudnn/11.8-v8.7.0             6) python/3.10.4

 

  File "/home/wenleyan/projects/MotionBERT/train.py", line 263
    elif "h36m" in opts.config::  # H36M
                               ^
SyntaxError: invalid syntax
